--- a/styles/architect.css
+++ b/styles/architect.css
@@ -18,7 +18,7 @@ nav>ul{
     display: flex;
 }
 nav ul li{
-    margin-right: 40px;
+    margin-right: 30px;
     list-style: none;
 }
 nav a{
@@ -69,9 +69,53 @@ nav a{
 .banner-picture img {
     width: 100%;
 }
+main{
+    max-width: 1440px;
+    margin: 70px auto;
+}
+.Features-conteiner{
+    display: flex;
+    align-items: center;
+}
+.img-content{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap:24px;
+    padding-right: 180px;
+}
+.Quick{
+    color: #727272;
+    font-size: 2.8rem;
+    font-weight: 500px;
+}
+.of-our{
+    color: #131313;
+    font-size: 2.8rem;
+    font-weight: 700px;
+}
+.Features{
+    color: #FF900E;
+    font-size: 2.8rem;
+    font-weight: 700px;
+}
+.Features-descriptions{
+    color: #727272;
+    font-size: 1rem;
+
+}
+.second-btn{
+    background-color:#FF900E ;
+    width: 180px;
+    height: 64px;
+    border-radius: 10px;
+    color: #FFF;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
 @media screen and (max-width:577px) {
     nav{
         flex-direction: column;
+        padding: 60px 200px;
     }
     .banner{
         padding-left: 20px;
@@ -81,12 +125,25 @@ nav a{
         padding-left: 1px;
         padding-right: 1px;
     }
+    .Features-conteiner{
+        flex-direction: column;
+        padding-left: 2rem;
+    }
+    .img-content{
+        grid-template-columns: 1fr;
+        padding-left: 2rem;
+        padding-right: 70px;
+    }
+    .second-btn-style{
+        text-align: center;
+    }
 }
 
 /* Learge Screen */
 @media screen and (min-width:577px) and (max-width:960px) {
     nav{
         flex-direction: column;
+        padding: 60px 200px;
     }
     .banner{
         
@@ -94,5 +151,14 @@ nav a{
     .banner-picture{
         padding-left: 1px;
         padding-right: 1px;
+    }
+    .img-content{
+        grid-template-columns: 1fr;
+        padding-left: 2rem;
+        padding-right: 70px;
+    }
+    .Features-conteiner{
+        flex-direction: column;
+        padding-left: 2rem;
     }
 }
