--- a/styles/architect.css
+++ b/styles/architect.css
@@ -137,7 +137,8 @@ main{
     margin-top: 50px;
     justify-content: space-between;
     /* margin-left:30px; */
-    margin-right: 50px;
+    /* margin-right: 50px; */
+    text-align: center;
 }
 .fact-image-content{
     border: 1px solid #FF900E ;
@@ -182,6 +183,81 @@ main{
     font-weight: 400px;
     padding-left: 45px;
 }
+.sponsor-conteiner{
+    text-align: center;
+}
+.sponsors-title{
+    color: #131313;
+    font-size: 3rem;
+    font-weight: 700px;
+}
+.sponsor-description{
+    color: #727272;
+    font-size: 1rem;
+
+}
+.sponsor-content{
+    display: flex;
+    text-align: center;
+    margin-top: 50px;
+    justify-content: space-evenly;
+    gap: 50px;
+}
+.features-and-love{
+    display: flex;
+    margin-top: 130px;
+    gap: 40px;
+    margin-left: 150px;
+    margin-right: 150px;
+}
+.card{
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+    margin-top: 30px;
+}
+.architect-img {
+    width: 100%;
+    padding-right: 10px;
+    
+}
+.feature-title{
+    color: #131313;
+    font-size: 3rem;
+    font-weight: 700px;
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+.feature-description{
+    color: #727272;
+    font-size: 1rem;
+}
+.feature-content{
+    color: #131313;
+    font-size: 1.2rem;
+    font-weight: 600px;
+}
+.exprience-btn{
+    position: relative;
+    bottom: 100px;
+}
+.years-btn-style{
+    background-color: #FF900E;
+    width: 342px;
+    height: 200px;
+}
+.exprience-btn h2{
+    color: #FFF;
+    text-align: center;
+    font-size: 4rem;
+    font-weight: 700px;
+    margin: 0px;
+}
+.exprience-btn p{
+    color: #FFF;
+    font-size: 2rem;
+    margin: 0px;
+}
 @media screen and (max-width:577px) {
     nav{
         flex-direction: column;
@@ -213,10 +289,24 @@ main{
     }
     .fact-img{
         flex-direction: column;
+        gap: 10px;
     }
     .fact{
-        margin: 70px 80px;
-        margin-left: ;
+        margin-right: 180px;
+    }
+    .sponsor-content{
+        flex-direction: column;
+    }
+    .features-and-love{
+        flex-direction: column;
+    }
+    .architect-img img {
+       width: 400px;
+       /* padding: 0; */
+      /* margin-left:0px; */
+    }
+    .years-btn-style{
+        max-width: 300px;
     }
 }
 
@@ -248,4 +338,8 @@ main{
     .fact-img{
         flex-direction: column;
     }
+    .sponsor-content{
+        flex-direction: column;
+    }
+
 }
